update: add overview

--- a/index.html
+++ b/index.html
@@ -157,45 +157,28 @@
 </section>
 <!-- End paper abstract -->
 
-
-<!-- Image carousel -->
-<!-- <section class="hero is-small">
-  <div class="hero-body">
-    <div class="container">
-      <div id="results-carousel" class="carousel results-carousel">
-       <div class="item"> -->
-        <!-- Your image here -->
-        <!-- <img src="static/images/carousel1.jpg" alt="MY ALT TEXT"/>
-        <h2 class="subtitle has-text-centered">
-          First image description.
-        </h2>
+<!-- Paper abstract -->
+<section class="section hero is-light">
+  <div class="container is-max-desktop">
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-four-fifths">
+        <h2 class="title is-3">Overview</h2>
+        <img src="static\images\overview.png" width="1000" height=auto alt="MY ALT TEXT"/>
+        <div class="content has-text-justified">
+          <p>
+            Our framework consists of two modules: the visible-invisible semantic propa-
+gation module for coherent semantic assignment of occluded parts based on visible
+semantics, and the region-wise texture propagation module for performing texture
+propagation in each independent semantic region. Additionally, we present a view-
+aware curricular learning strategy to adapt the network to scenarios with large pose
+variations and heavy occlusions.
+          </p>
+        </div>
       </div>
-      <div class="item"> -->
-        <!-- Your image here -->
-        <!-- <img src="static/images/carousel2.jpg" alt="MY ALT TEXT"/>
-        <h2 class="subtitle has-text-centered">
-          Second image description.
-        </h2>
-      </div>
-      <div class="item"> -->
-        <!-- Your image here -->
-        <!-- <img src="static/images/carousel3.jpg" alt="MY ALT TEXT"/>
-        <h2 class="subtitle has-text-centered">
-         Third image description.
-       </h2>
-     </div>
-     <div class="item"> -->
-      <!-- Your image here -->
-      <!-- <img src="static/images/carousel4.jpg" alt="MY ALT TEXT"/>
-      <h2 class="subtitle has-text-centered">
-        Fourth image description.
-      </h2>
     </div>
   </div>
-</div>
-</div>
-</section> -->
-<!-- End image carousel -->
+</section>
+<!-- End paper abstract -->
 
 <!-- Motion Sequence -->
 <section class="hero is-small is-light">
