update: rename project title

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
-  <title>Academic Project Page</title>
+  <title>Delving into Invisible Semantics for Generalized One-shot Neural Human Rendering</title>
   <link rel="icon" type="image/x-icon" href="static/images/favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
   rel="stylesheet">
@@ -166,12 +166,7 @@
         <img src="static\images\overview.png" width="1000" height=auto alt="MY ALT TEXT"/>
         <div class="content has-text-justified">
           <p>
-            Our framework consists of two modules: the visible-invisible semantic propa-
-gation module for coherent semantic assignment of occluded parts based on visible
-semantics, and the region-wise texture propagation module for performing texture
-propagation in each independent semantic region. Additionally, we present a view-
-aware curricular learning strategy to adapt the network to scenarios with large pose
-variations and heavy occlusions.
+            Our framework consists of two modules: the visible-invisible semantic propagation module for coherent semantic assignment of occluded parts based on visible semantics, and the region-wise texture propagation module for performing texture propagation in each independent semantic region. Additionally, we present a view-aware curricular learning strategy to adapt the network to scenarios with large pose variations and heavy occlusions.
           </p>
         </div>
       </div>
